# rah5ff_DS5111su24_lab_01

./: .gitignore  LICENSE  MAKEFILE.mk  NOTES.md  README.md  demo.py  download_books.py  download_other_books.py  get_the_books.sh  makefile  pylint_output.txt  pylintr  pylintrc  pyproject.toml  requirements.txt  tokenizer.py
.github/workflows/: validations.yml
demos/: demo.py  demo_tests.py  demos.ipynb
env/: pyvenv.cfg
scripts/: build_test_data.py  download_other_books.py
scripts/.ipynb_checkpoints/: build_test_data-checkpoint.py
src/: tokenize.py  tokenizer.py  utils.py
src/.ipynb_checkpoints/: utils-checkpoint.py
src/dev_module/: setup.py
src/tokenizer.egg-info/: PKG-INFO
tests/: README.md  sample_tests.py  test_clean_text.py  test_compatibility.py  test_count_words.py  test_integration.py  test_tokenizer.py  test_utils.py
tests/functions/: books_as_strings.json  test_clean_text.py  test_count_words.py  test_tokenizer.py
tests/tokenizer/: books_as_strings.json  test_clean_text.py  test_count_words.py  test_tokenizer.py
tokenizer_env/: pyvenv.cfg
tokenizer_env/tests/: test_string.py
