[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenizer"
version = "0.0.2"
authors = [
  { name="Ryan Healy", email="rah5ff@virginia.edu" },
]
description = "A simple Text Tokenizer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rah-ds/rah5ff_DS5111su24_lab_01"
